@@ -159,6 +159,9 @@
 
       \item \code{atan(1i)} returned \code{NaN+Infi} (rather than
       \code{0+Infi}) on platforms without C99 complex support. 
+
+      \item \code{library()} failed to cache meta data (unlike
+      \code{loadNamespace()}) causing failures in packages without a namespace.
     }
   }
 }
